src/objects/Campaign_Message_Content__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Campaign_Message__c</fullName>
        <description>The message campaign this content is related to.</description>
        <inlineHelpText>The message campaign this content is related to.</inlineHelpText>
        <label>Campaign Message</label>
        <referenceTo>Campaign_Message_Def__c</referenceTo>
        <relationshipLabel>Campaign Message Contents</relationshipLabel>
        <relationshipName>Campaign_Message_Contents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>The language of the content</description>
        <inlineHelpText>The language of the content</inlineHelpText>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>EN</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Message_Key__c</fullName>
        <formula>Campaign_Message__r.Message_Key__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Message Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>The value of the message content</description>
        <inlineHelpText>The value of the message content</inlineHelpText>
        <label>Value</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>Campaign Message Content</label>
    <nameField>
        <label>Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Message Contents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>